--- a/FI.WebAtividadeEntrevista/Views/Cliente/Incluir.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Incluir.cshtml
@@ -7,6 +7,8 @@
         var urlPost = '@Url.Action("Incluir", "Cliente", new { area = "" })';
     </script>
     @Scripts.Render("~/bundles/clientes")
+    @Scripts.Render("~/bundles/jquerymask")
+    @*@Scripts.Render("~/bundles/jqueryval")*@
 }
 <h2>@Html.Raw(ViewBag.Title)</h2>
 @Html.Partial("Forms")
